# Dijkstar

./: .flake8  .travis.yml  CHANGELOG  CHANGELOG.md  CHANGELOG.rst  LICENSE  MANIFEST.in  Makefile  README  README.md  README.rst  buildout.cfg  commands.py  pyproject.toml  setup.cfg  setup.py  tox.ini
dijkstar/: __init__.py  __main__.py  algorithm.py  graph.py  tests.py
dijkstar/server/: app.py  client.py  conf.py  endpoints.py  utils.py
dijkstar/server/templates/: __init__.py  home.html
dijkstar/tests/: test_algorithm.py  test_console_script.py  test_graph.py  test_server.py  test_use_case.py
src/dijkstar/: __init__.py  __main__.py  algorithm.py  graph.py
src/dijkstar/server/: app.py  client.py  conf.py  endpoints.py  utils.py
src/dijkstar/server/templates/: __init__.py  home.html
tests/: test_algorithm.py  test_console_script.py  test_graph.py  test_server.py
